[gd_scene load_steps=6 format=3 uid="uid://by1oxtiv55xwi"]

[ext_resource type="Script" path="res://Scripts/pepper.gd" id="1_6m7sh"]
[ext_resource type="Texture2D" uid="uid://dbj5oayyh27ai" path="res://icon.svg" id="1_xgsc6"]
[ext_resource type="Script" path="res://Scripts/draggable.gd" id="2_k1eq2"]
[ext_resource type="Script" path="res://Scripts/tooltip.gd" id="3_ui2nt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j3t1n"]
size = Vector2(128, 128)

[node name="DraggableObject" type="RigidBody2D"]
z_index = 1
collision_layer = 2
contact_monitor = true
script = ExtResource("1_6m7sh")

[node name="Icon" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("1_xgsc6")

[node name="PhysicsCollider" type="CollisionShape2D" parent="."]
visible = false
light_mask = 2
visibility_layer = 0
shape = SubResource("RectangleShape2D_j3t1n")

[node name="DetectionArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
visible = false
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_j3t1n")

[node name="Tooltip" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = -55.0
offset_top = -92.0
offset_right = 56.0
offset_bottom = -69.0
text = "Blah"
horizontal_alignment = 1
script = ExtResource("3_ui2nt")

[node name="Draggable" type="Node2D" parent="."]
script = ExtResource("2_k1eq2")

[connection signal="mouse_entered" from="DetectionArea" to="Tooltip" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_entered" from="DetectionArea" to="Draggable" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="DetectionArea" to="Tooltip" method="_on_area_2d_mouse_exited"]
[connection signal="mouse_exited" from="DetectionArea" to="Draggable" method="_on_area_2d_mouse_exited"]
